--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-####################################################################################
+# ####################################################################################
 # docker-compose file for Apache Guacamole
 # created by PCFreak 2017-06-28
 #
@@ -83,27 +83,104 @@
 # 0.6                2023-03-23        switched to postgres 15.2-alpine
 #####################################################################################
 
+# version: '2.0'
+
+# # networks
+# # create a network 'guacnetwork_compose' in mode 'bridged'
+# networks:
+#   guacnetwork_compose:
+#     driver: bridge
+
+# # services
+# services:
+#   # guacd
+#   guacd:
+#     container_name: guacd_compose
+#     image: guacamole/guacd
+#     networks:
+#       guacnetwork_compose:
+#     restart: always
+#     volumes:
+#     - ./drive:/drive:rw
+#     - ./record:/record:rw
+#   # postgres
+#   postgres:
+#     container_name: postgres_guacamole_compose
+#     environment:
+#       PGDATA: /var/lib/postgresql/data/guacamole
+#       POSTGRES_DB: guacamole_db
+#       POSTGRES_PASSWORD: 'ChooseYourOwnPasswordHere1234'
+#       POSTGRES_USER: guacamole_user
+#     image: postgres:15.2-alpine
+#     networks:
+#       guacnetwork_compose:
+#     restart: always
+#     volumes:
+#     - ./init:/docker-entrypoint-initdb.d:z
+#     - ./data:/var/lib/postgresql/data:Z
+#     ports:
+#     - "5432:5432"
+
+#   # guacamole
+#   guacamole:
+#     container_name: guacamole_compose
+#     depends_on:
+#     - guacd
+#     - postgres
+#     environment:
+#       GUACD_HOSTNAME: guacd
+#       POSTGRES_DATABASE: guacamole_db
+#       POSTGRES_HOSTNAME: postgres
+#       POSTGRES_PASSWORD: 'ChooseYourOwnPasswordHere1234'
+#       POSTGRES_USER: guacamole_user
+#     image: guacamole/guacamole
+#     links:
+#     - guacd
+#     networks:
+#       guacnetwork_compose:
+#     ports:
+# ## enable next line if not using nginx
+#     - 8181:8080/tcp # Guacamole is on :8080/guacamole, not /.
+# ## enable next line when using nginx
+# #    - 8080/tcp
+#     restart: always
+
+# ########### optional ##############
+#   # nginx
+# #  nginx:
+# #   container_name: nginx_guacamole_compose
+# #   restart: always
+# #   image: nginx
+# #   volumes:
+# #   - ./nginx/templates:/etc/nginx/templates:ro
+# #   - ./nginx/ssl/self.cert:/etc/nginx/ssl/self.cert:ro
+# #   - ./nginx/ssl/self-ssl.key:/etc/nginx/ssl/self-ssl.key:ro
+# #   ports:
+# #   - 8443:443
+# #   links:
+# #   - guacamole
+# #   networks:
+# #     guacnetwork_compose:
+# ####################################################################################
+
+
 version: '2.0'
 
-# networks
-# create a network 'guacnetwork_compose' in mode 'bridged'
 networks:
   guacnetwork_compose:
     driver: bridge
 
-# services
 services:
-  # guacd
   guacd:
     container_name: guacd_compose
     image: guacamole/guacd
     networks:
-      guacnetwork_compose:
+      - guacnetwork_compose
     restart: always
     volumes:
-    - ./drive:/drive:rw
-    - ./record:/record:rw
-  # postgres
+      - ./drive:/drive:rw
+      - ./record:/record:rw
+
   postgres:
     container_name: postgres_guacamole_compose
     environment:
@@ -113,18 +190,19 @@ services:
       POSTGRES_USER: guacamole_user
     image: postgres:15.2-alpine
     networks:
-      guacnetwork_compose:
+      - guacnetwork_compose
     restart: always
     volumes:
     - ./init:/docker-entrypoint-initdb.d:z
     - ./data:/var/lib/postgresql/data:Z
+    ports:
+      - "5432:5432"
 
-  # guacamole
   guacamole:
     container_name: guacamole_compose
     depends_on:
-    - guacd
-    - postgres
+      - guacd
+      - postgres
     environment:
       GUACD_HOSTNAME: guacd
       POSTGRES_DATABASE: guacamole_db
@@ -133,30 +211,27 @@ services:
       POSTGRES_USER: guacamole_user
     image: guacamole/guacamole
     links:
-    - guacd
+      - guacd
     networks:
-      guacnetwork_compose:
-    ports:
-## enable next line if not using nginx
-##    - 8080:8080/tcp # Guacamole is on :8080/guacamole, not /.
-## enable next line when using nginx
-    - 8080/tcp
+      - guacnetwork_compose
     restart: always
+    ports:
+      - 8181:8080/tcp
 
-########### optional ##############
-  # nginx
   nginx:
-   container_name: nginx_guacamole_compose
-   restart: always
-   image: nginx
-   volumes:
-   - ./nginx/templates:/etc/nginx/templates:ro
-   - ./nginx/ssl/self.cert:/etc/nginx/ssl/self.cert:ro
-   - ./nginx/ssl/self-ssl.key:/etc/nginx/ssl/self-ssl.key:ro
-   ports:
-   - 8443:443
-   links:
-   - guacamole
-   networks:
-     guacnetwork_compose:
-####################################################################################
+    container_name: nginx_guacamole_compose
+    restart: always
+    image: nginx
+    volumes:
+      - ./nginx/templates:/etc/nginx/templates:ro
+      - ./nginx/ssl/self.cert:/etc/nginx/ssl/self.cert:ro
+      - ./nginx/ssl/self-ssl.key:/etc/nginx/ssl/self-ssl.key:ro
+    ports:
+      - 8443:443
+    links:
+      - guacamole
+    networks:
+      - guacnetwork_compose
+
+volumes:
+  postgres_data:
